Git #33: Fixed paragraph spacing in FAQ

--- a/resources/gato-template-mobilefirst/css/_contenttype_tweaks.scss
+++ b/resources/gato-template-mobilefirst/css/_contenttype_tweaks.scss
@@ -150,6 +150,9 @@ h2.event-list-title {
   h2.gato-faq-header a {
     font-family: $univers;
   }
+  .gato-faqitem-answer p{
+    margin-bottom: 3rem;
+  }
 }
 .has-background {
   ul.gato-faq-hierarchy {
